// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`fails to load from local path 1`] = `[Error: Failed to find icon set at location "./local.json"]`;

exports[`fails to load without location with invalid name 1`] = `[Error: Icon set "invalid" not found. Please see if the name is correct or try installing it with "npm install @iconify-json/invalid"]`;

exports[`loads from http location and caches result to file system 1`] = `
{
  "aliases": undefined,
  "height": 24,
  "icons": {
    "icon": {
      "body": "",
    },
  },
  "left": undefined,
  "name": "irrelevant",
  "names": undefined,
  "top": undefined,
  "width": 24,
}
`;

exports[`loads from http location and caches result to file system 2`] = `
{
  "aliases": undefined,
  "height": 24,
  "icons": {
    "icon": {
      "body": "",
    },
  },
  "left": undefined,
  "name": "irrelevant",
  "names": undefined,
  "top": undefined,
  "width": 24,
}
`;

exports[`loads from https location and caches result to file system 1`] = `
{
  "aliases": undefined,
  "height": 24,
  "icons": {
    "icon": {
      "body": "",
    },
  },
  "left": undefined,
  "name": "irrelevant",
  "names": undefined,
  "top": undefined,
  "width": 24,
}
`;

exports[`loads from https location and caches result to file system 2`] = `
{
  "aliases": undefined,
  "height": 24,
  "icons": {
    "icon": {
      "body": "",
    },
  },
  "left": undefined,
  "name": "irrelevant",
  "names": undefined,
  "top": undefined,
  "width": 24,
}
`;

exports[`loads from local path 1`] = `
{
  "aliases": undefined,
  "height": 24,
  "icons": {
    "icon": {
      "body": "",
    },
  },
  "left": undefined,
  "name": "abc",
  "names": [
    "abc",
  ],
  "top": undefined,
  "width": 24,
}
`;

exports[`loads from module by location (rename default location) 1`] = `
{
  "aliases": undefined,
  "height": undefined,
  "icons": {
    "a": {
      "body": "",
    },
  },
  "left": undefined,
  "name": "rename",
  "names": undefined,
  "top": undefined,
  "width": undefined,
}
`;

exports[`loads from module by location 1`] = `
{
  "aliases": undefined,
  "height": undefined,
  "icons": undefined,
  "left": undefined,
  "name": "xyz",
  "names": undefined,
  "top": undefined,
  "width": undefined,
}
`;

exports[`without location loads from @iconify/json by name 1`] = `
{
  "aliases": {
    "b": {
      "height": 16,
      "parent": "a",
      "rotate": 1,
      "width": 16,
    },
  },
  "height": 24,
  "icons": {
    "a": {
      "body": "",
    },
  },
  "left": undefined,
  "name": "bar",
  "names": undefined,
  "top": undefined,
  "width": 24,
}
`;

exports[`without location loads from @iconify-json by name 1`] = `
{
  "aliases": undefined,
  "height": undefined,
  "icons": {
    "a": {
      "body": "",
    },
  },
  "left": undefined,
  "name": "foo",
  "names": undefined,
  "top": undefined,
  "width": undefined,
}
`;
